# local-pyspark-testing

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  databricks.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: architecture.drawio
resources/: clusters.yml  jobs.yml
src/local_pyspark_testing/: environment.py  transforms.py
src/local_pyspark_testing/jobs/: bronze_to_silver.py  silver_to_gold.py
tests/: test_jobs.py  test_transforms.py
